# 2.5d-engine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: render.cpp  render.h
src/entities/: GameObject.cpp  GameObject.h  Person.cpp  Person.h  World.cpp  World.h
src/render/: Ray.cpp  Ray.h
src/utils/: math.cpp  math.h
